Changes since version 1.1
--------------------------------------

New Features
============

o added DragCapture. DragCapture implements a pointer capture logic. It is now used
  in DragValue, Drag and ResponseHandler. It automatically supports multi touch.

o Iconset as font

Improvements
============

o DragValue: The 'blind_angle' option now applies to all choices of the 'direction'
  option.

o ResponseHandle: has real MultiTouch support. This also applies to the z_handling
  gesture, which means that any number of touch points can now drag handles in the
  EQ.

o Button/Toggle: set URL or class name for icon

o Faders got title and value ChildWidgets.

o Scale: New child elements pointer and bar to visualize values within Scale.

o Window: complete rewrite. Less DOM nodes, less complexity, using new
  toolkit APIs. Additionally layout switched from table-like div zoo to
  more slick flexbox.
  
o ValueKnob: All children are of class ChildWidget now. This breaks the
  use of "label" option for TK.Label, had to be renamed to "title".
  
o MeterBase: Title and value label are real widgets now. Their name changed
  so they don't have an underscore any more:
  _label -> label and _title -> title

o MultiMeter: Title is a ChildWidget now. Name changed from _title to title.
  
o ValueButton: _bar, _base and marker were removed in favour of new Scale ChildWidget.


API Changes
===========

o The return value of event handlers is processed differently now.
  Any return value which is not undefined will interrupt the execution of
  any other handlers. fire_event will return that value.
  This change was necessary because some DOM events use values !== false for
  cancellation. It also makes more complex signalling logic possible for events.
  This is used by the new DragCapture class.
  
o Circular elements switched the option for the opening angle from "basis"
  to "angle". This is to separate the distance to drag on Knob and ValueKnob
  from the angle.
  